# filtrado-imagenes

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.atl/: skill-registry.md
filtrado/: __init__.py  core.py  display.py
notebooks/: filtrado_imagenes.ipynb
openspec/: config.yaml
openspec/changes/archive/2026-06-14-fix-app-py-reescritura/: archive-report.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-recorte-configurable-s8/: archive-report.md
openspec/changes/recorte-configurable-branding/: design.md  proposal.md  tasks.md
openspec/changes/recorte-configurable-s8/: design.md  proposal.md  tasks.md
openspec/changes/ui-visualizacion-e-imagenes/: design.md  proposal.md  tasks.md
openspec/specs/: app-structure.md  course-branding.md  crop-overlay.md  crop-size-config.md  test-images-real-world.md
tests/: conftest.py  test_app_structure.py  test_core.py  test_display.py
